@@ -1,7 +1,6 @@
 #!/bin/bash
 # Copyright (c) 2004-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header$
 
 # Contributed by Roy Marples (uberlord@gentoo.org)
 
