@@ -1,6 +1,5 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header$
 
 # RC Dependency and misc service functions
 
